--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,15 @@ SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
 SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
+find_package(CUDA REQUIRED)
+if (CUDA_FOUND)
+    message(STATUS "CUDA library status:")
+    message(STATUS "    version: ${CUDA_VERSION}")
+    message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
+else ()
+    message(FATAL_ERROR "Could not locate CUDA")
+endif()
+
 find_package(OpenCV REQUIRED)
 if (OpenCV_FOUND)
     message(STATUS "OpenCV library status:")
@@ -19,6 +28,7 @@ find_package(RapidJSON)
 message(STATUS "include path: ${RapidJSON_INCLUDE_DIRS}")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(/opt/nvidia/vpi1/include)
 include_directories(/usr/include/eigen3)
 # include_directories(/usr/local/include/eigen3)
 file(GLOB SOURCE_FILES src/*.cpp)
@@ -26,6 +36,8 @@ file(GLOB SOURCE_FILES src/*.cpp)
 add_executable(findchessboard main.cpp ${SOURCE_FILES})
 
 target_link_libraries (
-        ${CMAKE_PROJECT_NAME}
-        ${OpenCV_LIBS}
+    ${CMAKE_PROJECT_NAME}
+    ${OpenCV_LIBS}
+    /opt/nvidia/vpi1/lib64/libnvvpi.so
+    cuda
 )
